--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asl",
+  "name": "exponental",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
+    "axios": "^1.8.3",
+    "cloudinary": "^2.6.0",
+    "framer-motion": "^12.7.4",
+    "mongodb": "^6.14.2",
+    "next": "15.2.2",
+    "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "daisyui": "^5.0.4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.2.2",
+    "tailwindcss": "^4"
   }
 }
