--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
+    "twilio": "^5.6.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
